# stm32-rs485

./: CMakeLists.txt  README.md  old_code.txt  prj.conf
app/: CMakeLists.txt  prj.conf
app/boards/: stm32h747i_disco_stm32h747xx_m7.overlay
boards/: stm32h747i_disco_stm32h747xx_m7.overlay
src/: main.c
